[package]
name = "brain"
version = "0.1.0"
edition = "2018"
authors = ["museun <museun@outlook.com>"]

[dependencies]
rand = "0.5.3"
getopts = "0.2.18"
tiny_http = "0.6.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
bincode = "1.0.1"
hashbrown = { version = "0.1.7", features=["serde"] }