[package]
name = "brain"
version = "0.1.0"
edition = "2018"
authors = ["museun <museun@outlook.com>"]

[dependencies]
markov = { path = "../markov" }
config = { path = "../config" }
server = { path = "../server" }

futures = { version = "0.3.1", default-features = false }
hashbrown = { version = "0.6.3", features = ["serde"] }
# rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "0.2.10", default-features = false, features = ["macros", "fs", "rt-threaded", "io-util", "stream"] }
tracing = "0.1.12"
tracing-subscriber = { version = "0.2.0-alpha.4", default-features = false, features = ["smallvec", "fmt", "ansi"] }
anyhow = "1.0.26"
pico-args = "0.3.1"
toml = { version = "0.5.6", features = ["preserve_order"] }
indicatif = "0.13.0"
