[package]
name = "client"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
types = { path = "../types" }

reqwest = { version = "0.10.1", default-features = false, features = ["json"] }
serde = "1.0.104"

[dev-dependencies]
hashbrown = "0.7.0"
httptest = "0.12.0"
matches = "0.1.8"
serde_json = "1.0.48"
tokio = { version = "0.2.11", default-features = false, features = ["macros", "io-util", "io-std"] }
