[package]
name = "client"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
types = { path = "../types" }

reqwest = { version = "0.10.4", default-features = false, features = ["json"] }
serde = "1.0.105"

[dev-dependencies]
hashbrown = "0.7.1"
httptest = "0.12.2"
matches = "0.1.8"
serde_json = "1.0.48"
tokio = { version = "0.2.13", default-features = false, features = ["macros", "io-util", "io-std"] }
