[package]
name = "markov"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
bytes = { version = "0.5.4", features = ["serde"] }
hashbrown = { version = "0.7.0", features = ["serde"] }
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
snap = "0.2.5"

